--- a/test-output/index.html
+++ b/test-output/index.html
@@ -191,12 +191,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'CheckOutProcess_Enter_PromoCode')
 data.setCell(0, 2, 'ECommerce_TestCases.TestCase13')
-data.setCell(0, 3, 55199);
+data.setCell(0, 3, 45352);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 49 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -236,12 +236,8 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">CheckOutProcess_Enter_PromoCode</span>
-                <span class="method-start">32381 ms</span>
+                <span class="method-start">3978 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">Quit_Amazon</span>
-                <span class="method-start">87581 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
