--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97cf6d">  <td>25/02/10 21:09:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Browser_Launch_Quit.Quit_Amazon()[pri:0, instance:ECommerce_TestCases.TestCase13@72e5a8e]">&lt;&lt;Quit_Amazon</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@745914658</td>   <td></td> </tr>
-<tr bgcolor="97cf6d">  <td>25/02/10 21:08:14</td>   <td>-87579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Browser_Launch_Quit.Launch_Amazon(java.lang.String)[pri:0, instance:ECommerce_TestCases.TestCase13@72e5a8e]">&gt;&gt;Launch_Amazon</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@745914658</td>   <td></td> </tr>
-<tr bgcolor="bce87c">  <td>25/02/10 21:08:46</td>   <td>-55201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase13.CheckOutProcess_Enter_PromoCode()[pri:0, instance:ECommerce_TestCases.TestCase13@72e5a8e]">CheckOutProcess_Enter_PromoCode</td> 
-  <td>TestNG-tests-1@745914658</td>   <td></td> </tr>
+<tr bgcolor="727db3">  <td>25/02/11 13:19:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Browser_Launch_Quit.Launch_Amazon(java.lang.String)[pri:0, instance:ECommerce_TestCases.TestCase13@42e99e4a]">&gt;&gt;Launch_Amazon</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1918894158</td>   <td></td> </tr>
+<tr bgcolor="f385a2">  <td>25/02/11 13:19:23</td>   <td>3975</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase13.CheckOutProcess_Enter_PromoCode()[pri:0, instance:ECommerce_TestCases.TestCase13@42e99e4a]">CheckOutProcess_Enter_PromoCode</td> 
+  <td>TestNG-tests-1@1918894158</td>   <td></td> </tr>
 </table>
